fix: docker go version, readme
