# docs/swagger.yaml
@@ -240,10 +240,6 @@ definitions:
         type: string
       role:
         $ref: '#/definitions/models.Role'
-      telegram_chat_id:
-        type: integer
-      telegram_id:
-        type: integer
     type: object
   models.Workout:
     properties:
